Updated sizes list and added apostraphes to all Boots 'N Beer that was missing them.

--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -49,7 +49,7 @@
 <h1> Information Page </h1>
 
  <p>This is an info page to get to know all of the band members of this great 
- country group, Boots N Beer.</p> 
+ country group, Boots 'N Beer.</p> 
 
 <h2 class="biography"> Biography </h2>
 
