--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -61,22 +61,18 @@
 
 <p>T-shirts with the logo on the front are available in the following sizes:</p>
 
+<ul class="sizes">
+    <li>XS</li>
+    <li>S</li>
+    <li>M</li>
+    <li>L</li>
+    <li>XL</li>
+</ul>
+
 <p>Looking for a custom Tee? Contact the owner, Matt Rockhold, and he will set you up with
 some of the root'nest toot'nest Tees around town.</p>
 
-<nav id="sizes">
-    <ul>
-	    <li>XS</li>
-	    <li>S</li>
-	    <li>M</li>
-	    <li>L</li>
-	    <li>XL</li>
-	</ul>
-</nav>
-
 <h2>More items coming soon!</h2>
-
-
 
 <footer>
 	&copy; 2017 by Boots 'N Beer
