--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -66,12 +66,12 @@
 
 <h1> Album Page </h1>
 
-<p> Main page displays Boots N Beer's latest hit albums. </p>
+<p> Main page displays Boots 'N Beer's latest hit albums. </p>
 
 <p> Here are two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
 
 <p> Both "Dirty" and "Muddy Spurs" were recorded in Des Moines, Iowa, which is close to where
-Boots N Beer will have the first few concerts of their upcoming tour! </p>
+Boots 'N Beer will have the first few concerts of their upcoming tour! </p>
 
 <img class="album" src="img/album_cover.png" alt="Album Cover"/> 
 <br>
@@ -114,7 +114,7 @@ Boots N Beer will have the first few concerts of their upcoming tour! </p>
 </table>
 
 <p>Looking for your favorite song but don't want to purchase the whole album? 
-Boots N Beer will be releasing various songs on ITunes and Google Music soon! 
+Boots 'N Beer will be releasing various songs on ITunes and Google Music soon! 
 Make sure you stay tuned to find out when it is official!</p>
 
 <b> Albums were recorded at Golden Fiddle Records. </b>
