Changed classes so piano and guitar matched with their class

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -64,9 +64,9 @@
 
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
 
-<img class="piano" src="img/guitar.png" alt="Guitar"/>
+<img class="guitar" src="img/guitar.png" alt="Guitar"/>
 
-<img class= "guitar" src="img/piano.jpg" alt="Piano"/> 
+<img class="piano" src="img/piano.jpg" alt="Piano"/> 
 
 
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
