gramar corrections, added ticket prices

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -96,7 +96,7 @@ locations including, but not limited to: </p>
 <p> Also, five lucky winners will be selected at each performance to choose any one of our merchandise 
 to take home for free! Visit our <a href="store_page.html">Store Page</a> to see what you could win! </p>
 
-<p>Boots N Beer hosts giveaways of this nature frequently, so be sure to visit the page 
+<p>Boots 'N Beer hosts giveaways of this nature frequently, so be sure to visit the page 
 often to make sure you never miss out on the deal of a lifetime!</p>
 
 <p id="schedulerefer">For a more complete list of performances, please refer to the <a href="schedule_page.html">Schedule</a> page...</p>
