--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -68,7 +68,7 @@
 
 <p> Main page displays Boots 'N Beer's latest hit albums. </p>
 
-<p> Here are two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
+<p> Here are two of Boots 'N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
 
 <p> Both "Dirty" and "Muddy Spurs" were recorded in Des Moines, Iowa, which is close to where
 Boots 'N Beer will have the first few concerts of their upcoming tour! </p>
