--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -66,11 +66,14 @@
 	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">October 6th	- Columbus, Iowa</a></li>
 </ol>
 
-<p>Miss one of the events? Boots 'N Beer offers video replays of the 
-concerts for anyone who would like to see the concert. BEWARE: A replay 
-of a concert may not be as root'n toot'n as a real concert! So, 
-be sure to buy your tickets today!</p>
+<P>Tickets range from $25 - $75</P>
+<p>Early bird discount 10%  So, be sure to buy your tickets today!</p>
 
+
+<p>Miss one of the events? Boots 'N Beer offers video replays of the 
+concerts for anyone who would like to see the concert.</p>
+<p>BEWARE: Watching a replay of our concert may not be as root'n toot'n of a good time as watching our concert live!</p>
+<p>Videos available for $50</p>
 
 
 <footer>
