--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -70,7 +70,7 @@
 </ul>
 
 <p>Looking for a custom Tee? Contact the owner, Matt Rockhold, and he will set you up with
-some of the root'nest toot'nest Tees around town.</p>
+some of the root'n'est toot'n'est Tees around town.</p>
 
 <h2>More items coming soon!</h2>
 
