added more content to the index page

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -80,6 +80,10 @@ Just wanna get out of the house and listen to a great small-town band? If so, th
 Band is the band for you! They range from country to old rock to even old blues! There's nothing 
 this band can't do!</p>
 
+<p> The four band members: Joe, Randy, Denver and Jake, have been writing original songs for the past three years. 
+The songs tell of the past in different ways. Most of the men spend their childhoods growning up in the midwest, Iowa is very dear to their hearts.
+Simpson College was the meeting place and the rest is history.</p>
+
 <p>Each band member can play a variety of instruments and have top notch vocals. If you are in search of a barn-yard
 hoe-down, join us at one of our participating venues and purchase your tickets today!</p>
 
