--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -86,7 +86,7 @@ shows or contacting Denver Denim himself!</p>
 <img class="member" src="img/duck_kid_page.png" alt="Image of Jake Grit"/> 
 
 <p> Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group 
-so he plays the drums, piano, and even the bongos!Jake says that he has playing drums ever 
+so he plays the drums, piano, and even the bongos! Jake says that he has been playing drums ever 
 since he was a kid, whether it was when he bought his first pair of drums or when he 
 was beating on the trash can outside, he just felt this rhythm inside! </p>    
 
