Changed image extension so that it would show up on other browsers. Also fixed images on index page

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -64,7 +64,7 @@
 
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
 
-<img class="guitar" src="img/guitar.png" alt="Guitar"/>
+<img class="guitar" src="img/guitar.jpg" alt="Guitar"/>
 
 <img class="piano" src="img/piano.jpg" alt="Piano"/> 
 
